Fri May 18 05:29:21 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb (xsystem): make a temporary fix to get $(...) macros
	  properly expanded on a command execution.

Fri May 18 03:49:55 2001  Brian F. Feldman  <green@FreeBSD.org>

	* lib/mkmf.rb: unbreak "make install".  lib/* must be installed
	  under $rubylibdir, not under $libdir.

Thu May 17 19:36:47 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shell.rb, lib/shell/process-controller.rb,
	  lib/shell/command-processor.rb: translate Japanese comments into
	  English.

	* doc/shell.rd.jp: RD'ify and make some fixes.

	* doc/shell.rd: RD'ify, delete Japanese leftovers, make overall
	  English fixes, and sync with doc/shell.rd.jp.

Thu May 17 19:34:11 2001  Akinori MUSHA  <knu@iDaemons.org>

	* doc/shell.rd*, lib/shell*: bring shell.rb 0.6 onto the ruby_1_6
	  branch.

Thu May 17 17:35:04 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call0): address of local_vars might change during eval.

Thu May 17 07:30:15 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/md5/md5.txt, ext/md5/md5.txt.jp: s/SuperClass/Superclass/.

Thu May 17 06:37:14 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/md5/md5.txt: make wording fixes.

	* ext/md5/md5.txt.jp: ditto.

Thu May 17 05:23:52 2001  Keiju Ishitsuka <keiju@ishitsuka.com>
	* lib/irb.rb lib/irb/multi-irb.rb lib/irb/ruby-lex.rb lib/irb/version.rb
	  resolve ctrl-c problem

Tue May 15 17:46:37 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_and): should not push frozen key string.

	* array.c (rb_ary_or): ditto.

Mon May 14 13:50:22 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_schedule): should save context before raising
	  deadlock, saved context for current thread might be obsolete.

	* time.c (make_time_t): non DST timezone shift supported (hopefully).

Mon May 14 11:54:20 2001  Tanaka Akira  <akr@m17n.org>

	* signal.c: SIGINFO added.

Mon May 14 08:57:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
